compiler/testData/diagnostics/tests/redeclarations/RedeclarationParameterlessMain_before.kt
// !LANGUAGE: -ExtendedMainConvention

// FILE: a.kt
<!CONFLICTING_OVERLOADS!>fun main()<!> {}

// FILE: b.kt
<!CONFLICTING_OVERLOADS!>fun main()<!> {}
